# vanity-miner

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
benches/: benchmarks.rs
src/: address.rs  address_generator.rs  cli.rs  lib.rs  main.rs  progress_monitor.rs  validator.rs
src/address/: account.rs  encoding.rs  mod.rs  network.rs
src/chains/: conflux.rs  ethereum.rs  mod.rs
src/cli/: args.rs  mod.rs  runtime.rs  validators.rs
src/core/: chain.rs  config.rs  executor.rs  matcher.rs  mod.rs  provider.rs  types.rs
src/executors/: cpu.rs  mod.rs
src/generator/: builder.rs  generator.rs  mod.rs  types.rs
src/matchers/: builder.rs  composite.rs  contains.rs  mod.rs  prefix.rs  regex_matcher.rs  suffix.rs
src/output/: console.rs  csv.rs  mod.rs  result.rs  stats_console.rs
src/stats/: mod.rs  reporter.rs  types.rs
src/validator/: builder.rs  mod.rs  types.rs  validator.rs
