[package]
name = "vanity-miner"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[dependencies]
secp256k1 = { version = "0.30.0", features = ["rand"] }
hex = "0.4"
num_cpus = "1.0"
clap = { version = "4.5.23", features = ["derive"] }
regex = "1.11.1"
bip39 = { version = "2.1.0", features = ["all-languages", "rand"] }
bip32 = { version = "0.5.2" }
sha3 = "0.10.8"
